--- a/indext.html
+++ b/indext.html
@@ -39,7 +39,20 @@
 
 
 
+<!-- ................ Banner ..............  -->
 
+     <section>
+        <div class=" bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] pb-5  ">
+            <div class="mx-auto pt-5 ">
+            <img class="h-20 mx-auto " src="./assets/logo-dark.png" alt=""><br>
+                </div>
+
+            <h2 class="mx-auto flex justify-center text-white font-bold text-[30px]">Emergency Service Directory </h2> <br> 
+
+            <p class="flex justify-center text-white" >Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+            </div>
+        
+     </section>
 
 
 
